// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`filter empty experiments 1`] = `
Object {
  "ExpBoxes": "",
  "Experiments": Array [],
  "Handlers": Array [],
}
`;

exports[`filter empty experiments, not empty feature toggles 1`] = `
Object {
  "ExpBoxes": "12345,0,83;455527,0,51",
  "Experiments": Array [],
  "FeatureToggles": Object {
    "RawHandlers": Array [
      "{\\"CONTEXT\\":{\\"MAIL\\":{\\"testid\\":[\\"12345\\"]}},\\"HANDLER\\":\\"MAIL\\"}",
    ],
    "TestBucket": Array [
      Object {
        "Bucket": 83,
        "Testid": "12345",
      },
      Object {
        "Bucket": 51,
        "Testid": "455527",
      },
    ],
  },
  "Handlers": Array [
    Object {
      "CONTEXT": Object {
        "MAIL": Object {
          "testid": Array [
            "12345",
          ],
        },
      },
      "HANDLER": "MAIL",
    },
  ],
}
`;

exports[`filter kinda test 1`] = `
Object {
  "ConfigVersion": "16439",
  "CryptedExpBoxes": "DjnxBf9FW7qNdPRiTxTrlxaqYXgqM44ZmMv3w-ihy8_lnS_BjXOmh-VwO933Lx2OSOA7P2SNkG3AZ9LjhYfNNg,,",
  "ExpBoxes": "12345,0,-10;56789,0,42",
  "Experiments": Array [
    Object {
      "RawHandlers": Array [
        "{\\"HANDLER\\":\\"TEST\\",\\"CONTEXT\\":\\"BLAH\\"}",
        "{\\"testid\\":\\"12345\\"}",
        "{}",
      ],
      "TestBucket": Array [
        Object {
          "Bucket": -10,
          "Testid": "12345",
        },
        Object {
          "Bucket": 42,
          "Testid": "56789",
        },
      ],
    },
  ],
  "FeatureToggles": Object {
    "Handlers": Array [],
    "RawHandlers": Array [],
    "TestBucket": Array [],
  },
  "Handlers": Array [
    Object {
      "CONTEXT": "BLAH",
      "HANDLER": "TEST",
    },
    Object {
      "testid": "12345",
    },
    Object {},
  ],
  "LogstatUID": "",
  "Service": "mail-mobile-apps",
}
`;

exports[`filter kinda test 2 1`] = `
Object {
  "ConfigVersion": "16439",
  "CryptedExpBoxes": "DjnxBf9FW7qNdPRiTxTrlxaqYXgqM44ZmMv3w-ihy8_lnS_BjXOmh-VwO933Lx2OSOA7P2SNkG3AZ9LjhYfNNg,,",
  "ExpBoxes": "283995,0,83;455527,0,51;434731,0,51;470189,0,87;391077,0,33",
  "Experiments": Array [
    Object {
      "RawHandlers": Array [
        "{\\"CONTEXT\\":{\\"DISK\\":{\\"testid\\":[\\"283995\\"]}},\\"HANDLER\\":\\"DISK\\"}",
        "{\\"CONTEXT\\":{\\"MAIL\\":{}},\\"HANDLER\\":\\"MAIL\\"}",
        "{\\"CONTEXT\\":{\\"TELEMOST\\":{}},\\"TESTID\\":[\\"283995\\"],\\"HANDLER\\":\\"TELEMOST\\"}",
        "{\\"CONTEXT\\":{\\"MOBMAIL\\":{\\"flags\\":{\\"opt_in.folder_list\\":false},\\"logs\\":{\\"test_ids\\":\\"455527\\"},\\"source\\":\\"experiment\\"}},\\"HANDLER\\":\\"MOBMAIL\\"}",
        "{\\"CONTEXT\\":{\\"MOBMAIL\\":{\\"flags\\":{\\"compose.notify_action\\":true},\\"logs\\":{\\"test_ids\\":\\"434731\\"},\\"source\\":\\"experiment\\"}},\\"HANDLER\\":\\"MOBMAIL\\"}",
        "{\\"CONTEXT\\":{\\"MOBMAIL\\":{\\"flags\\":{\\"command_service.single_thread\\":true},\\"logs\\":{\\"test_ids\\":\\"470189\\"},\\"source\\":\\"experiment\\"}},\\"HANDLER\\":\\"MOBMAIL\\"}",
        "{\\"CONTEXT\\":{\\"MOBMAIL\\":{\\"flags\\":{\\"backup\\":true},\\"logs\\":{\\"test_ids\\":\\"391077\\"},\\"source\\":\\"experiment\\"}},\\"HANDLER\\":\\"MOBMAIL\\"}",
      ],
      "TestBucket": Array [
        Object {
          "Bucket": 83,
          "Testid": "283995",
        },
        Object {
          "Bucket": 51,
          "Testid": "455527",
        },
        Object {
          "Bucket": 51,
          "Testid": "434731",
        },
        Object {
          "Bucket": 87,
          "Testid": "470189",
        },
        Object {
          "Bucket": 33,
          "Testid": "391077",
        },
      ],
    },
  ],
  "FeatureToggles": Object {
    "Handlers": Array [],
    "RawHandlers": Array [],
    "TestBucket": Array [],
  },
  "Handlers": Array [
    Object {
      "CONTEXT": Object {
        "DISK": Object {
          "testid": Array [
            "283995",
          ],
        },
      },
      "HANDLER": "DISK",
    },
    Object {
      "CONTEXT": Object {
        "MAIL": Object {},
      },
      "HANDLER": "MAIL",
    },
    Object {
      "CONTEXT": Object {
        "TELEMOST": Object {},
      },
      "HANDLER": "TELEMOST",
      "TESTID": Array [
        "283995",
      ],
    },
    Object {
      "CONTEXT": Object {
        "MOBMAIL": Object {
          "flags": Object {
            "opt_in.folder_list": false,
          },
          "logs": Object {
            "test_ids": "455527",
          },
          "source": "experiment",
        },
      },
      "HANDLER": "MOBMAIL",
    },
    Object {
      "CONTEXT": Object {
        "MOBMAIL": Object {
          "flags": Object {
            "compose.notify_action": true,
          },
          "logs": Object {
            "test_ids": "434731",
          },
          "source": "experiment",
        },
      },
      "HANDLER": "MOBMAIL",
    },
    Object {
      "CONTEXT": Object {
        "MOBMAIL": Object {
          "flags": Object {
            "command_service.single_thread": true,
          },
          "logs": Object {
            "test_ids": "470189",
          },
          "source": "experiment",
        },
      },
      "HANDLER": "MOBMAIL",
    },
    Object {
      "CONTEXT": Object {
        "MOBMAIL": Object {
          "flags": Object {
            "backup": true,
          },
          "logs": Object {
            "test_ids": "391077",
          },
          "source": "experiment",
        },
      },
      "HANDLER": "MOBMAIL",
    },
  ],
  "LogstatUID": "",
  "Service": "mail-mobile-apps",
}
`;

exports[`filter not empty experiments, not empty feature toggles 1`] = `
Object {
  "ExpBoxes": "12345,0,83;455527,0,51;283995,0,83;455527,0,51",
  "Experiments": Array [
    Object {
      "RawHandlers": Array [
        "{\\"CONTEXT\\":{\\"DISK\\":{\\"testid\\":[\\"283995\\"]}},\\"HANDLER\\":\\"DISK\\"}",
        "{\\"CONTEXT\\":{\\"MAIL\\":{}},\\"HANDLER\\":\\"MAIL\\"}",
        "{\\"CONTEXT\\":{\\"TELEMOST\\":{}},\\"TESTID\\":[\\"283995\\"],\\"HANDLER\\":\\"TELEMOST\\"}",
        "{\\"CONTEXT\\":{\\"MOBMAIL\\":{\\"flags\\":{\\"opt_in.folder_list\\":false},\\"logs\\":{\\"test_ids\\":\\"455527\\"},\\"source\\":\\"experiment\\"}},\\"HANDLER\\":\\"MOBMAIL\\"}",
      ],
      "TestBucket": Array [
        Object {
          "Bucket": 83,
          "Testid": "283995",
        },
        Object {
          "Bucket": 51,
          "Testid": "455527",
        },
      ],
    },
  ],
  "FeatureToggles": Object {
    "RawHandlers": Array [
      "{\\"CONTEXT\\":{\\"MAIL\\":{\\"testid\\":[\\"12345\\"]}},\\"HANDLER\\":\\"MAIL\\"}",
    ],
    "TestBucket": Array [
      Object {
        "Bucket": 83,
        "Testid": "12345",
      },
      Object {
        "Bucket": 51,
        "Testid": "455527",
      },
    ],
  },
  "Handlers": Array [
    Object {
      "CONTEXT": Object {
        "MAIL": Object {
          "testid": Array [
            "12345",
          ],
        },
      },
      "HANDLER": "MAIL",
    },
    Object {
      "CONTEXT": Object {
        "DISK": Object {
          "testid": Array [
            "283995",
          ],
        },
      },
      "HANDLER": "DISK",
    },
    Object {
      "CONTEXT": Object {
        "MAIL": Object {},
      },
      "HANDLER": "MAIL",
    },
    Object {
      "CONTEXT": Object {
        "TELEMOST": Object {},
      },
      "HANDLER": "TELEMOST",
      "TESTID": Array [
        "283995",
      ],
    },
    Object {
      "CONTEXT": Object {
        "MOBMAIL": Object {
          "flags": Object {
            "opt_in.folder_list": false,
          },
          "logs": Object {
            "test_ids": "455527",
          },
          "source": "experiment",
        },
      },
      "HANDLER": "MOBMAIL",
    },
  ],
}
`;
